// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleContent > should match snapshot 1`] = `
<div>
  <article
    class="article"
  >
    <div
      data-testid="markdown-content"
    >
      # Test Content\\n\\nSome markdown content here.
    </div>
  </article>
</div>
`;

exports[`ArticleContent > should match snapshot with code block 1`] = `
<div>
  <article
    class="article"
  >
    <div
      data-testid="markdown-content"
    >
      
# Code Example

Here's some code:

\`\`\`javascript
const hello = 'world';
console.log(hello);
\`\`\`

    </div>
  </article>
</div>
`;
